- add discovery - refactoring - optimization cycles - conts managment
